@@ -1,3 +1,9 @@
+2008-07-03  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/vpn-helpers.c
+	  src/connection-editor/Makefile.am
+		- (vpn_get_plugins): expect VPN GUI plugins to be in $LIBDIR
+
 2008-07-02  Tambet Ingo  <tambet@gmail.com>
 
 	Patch from André Lemos <alemos@criticalsoftware.com>
